--- a/src/main/resources/templates/board/post.html
+++ b/src/main/resources/templates/board/post.html
@@ -35,13 +35,13 @@
             <label for="email"></label>
             <input type="email" class="form-control" id="email" th:field="*{email}">
         </div>
-        <button type="button" class="btn btn-secondary">취소</button>
+        <button type="button" class="btn btn-secondary" onclick="window.history.back()">취소</button>
         <button type="submit" class="btn btn-primary">등록</button>
     </form>
 </div>
 
 <div th:insert="~{fragments :: linkJS}"></div>
-<script>
+<script th:inline="javascript">
     // 파일 미리보기 및 삭제 로직
     document.getElementById('boardImage').addEventListener('change', function() {
         const preview = document.getElementById('preview');
